# llm-deployment-journey

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW_FIXES.md  DEPLOYMENT.md  Dockerfile  QWEN.md  README.md  README_启动说明.md  TESTING.md  _restructure.py  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1  启动.bat  安装依赖.bat
.github/workflows/: ci.yml  deploy.yml
config/: case_law.yaml  clause_patterns.yml  legal_kb.yaml  legal_rules.yaml
config/feedback/: .gitkeep
config/playbooks/: labor_contract.yaml  party_a.yaml  party_b.yaml  privacy_compliance.yaml
examples/: 示例_软件开发合同.txt
src/: __init__.py  agent_loop.py  chat_memory.py  config.py  exceptions.py  feedback_store.py  handlers.py  html_renderers.py  knowledge_freshness.py  legal_matcher.py  legal_terms.py  llm_client.py  logger.py  metrics.py  parser.py  playbook_manager.py  redliner.py  report.py  risk_engine.py  scan_detector.py  security.py  session_store.py  task_runner.py  tool_agent.py  utils.py  vector_store.py
tests/: conftest.py  test_analysis_enhancements.py  test_case_search.py  test_chat_memory.py  test_config.py  test_contract.txt  test_doc_parse.py  test_error_handling.py  test_feedback_store.py  test_html_renderers.py  test_integration.py  test_knowledge_freshness.py  test_legal_entities.py  test_legal_matcher.py  test_legal_search.py  test_p5_entities.py  test_parser.py  test_playbook_manager.py  test_redliner.py  test_report.py  test_risk_engine.py  test_security.py  test_session_store.py  test_tool_agent.py  test_tools_base.py  test_vector_store.py
(+62 files in other folders)
